--- a/index.css
+++ b/index.css
@@ -58,6 +58,13 @@
        
 }
 
-.menu-item-card:hover{
-  transform: translateY(20px);
+.menu-item-card:hover img{
+  transform: scale(1.1);
+  border:3px solid red
 }
+
+/* #img{
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+} */
